<resources>
    <string name="app_name">拷贝漫画</string>
    <string name="action_settings">设定</string>
    <string name="action_info">关于</string>
    <string name="action_download">下载</string>
    <string name="action_sort">整理</string>
    <string name="action_del">删除</string>
    <string name="menu_home">主页</string>
    <string name="menu_sort">分类</string>
    <string name="menu_rank">排行</string>
    <string name="app_description">©2022–2025源文雨\n本应用为拷贝漫画的第三方客户端，数据均来源于网络，作者不对其中所呈现的任何内容负责。</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_sub">我的订阅</string>
    <string name="menu_download">我的下载</string>
    <string name="page_latest">最近更新</string>
    <string name="page_book">图书详情</string>
    <string name="page_chapter">章节内容</string>
    <string name="page_group">漫画下载</string>
    <string name="page_topic">专题系列</string>
    <string name="page_search">漫画搜索</string>
    <string name="check_update">检查更新</string>
    <string name="set_search_types">设置搜索类别</string>
    <string name="navTextInfo">illust: Hiten(490219)</string>
    <string name="navTextInfoInputHint">请设定提示文字内容</string>
    <string name="clearHeadImgMsg">清除设定的图片?</string>
    <string name="err_pick_img">选取图片失败</string>
    <string name="err_crop_img">裁剪图片失败</string>
    <string name="download_apk_fail">下载更新失败</string>
    <string name="delele_all_empty_manga">删除所有空漫画?</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="permissionDenied">权限被拒绝</string>
    <string name="noLogin">未登录</string>
    <string name="load_home_error">加载主页控件出错</string>
    <string name="text_null">N/A</string>
    <string name="null_book">获取图书信息失败</string>
    <string name="null_volume">获取图书分卷失败</string>
    <string name="web_error">网络错误</string>
    <string name="download_cover_failed">保存封面失败</string>
    <string name="download_cover_timeout">保存封面超时</string>
    <string name="unsupported_mode_switching">不支持在此模式下切换</string>
    <string name="end_of_chapter">已经到头了~</string>
    <string name="press_again_to_load_previous_chapter">再次按下加载上一章</string>
    <string name="press_again_to_load_next_chapter">再次按下加载下一章</string>
    <string name="load_local_chapter_info_failed">读取本地章节信息失败</string>
    <string name="download_chapter_info_failed">下载章节信息失败</string>
    <string name="load_manga_error">加载漫画错误</string>
    <string name="count_zip_entries_error">统计zip图片数错误</string>
    <string name="load_page_number_error">第%1$d页加载异常</string>
    <string name="load_chapter_error">加载章节错误</string>
    <string name="show_image_error_try_lower_resolution">图片加载错误，请尝试下载后使用较低图片质量查看</string>
    <string name="touch_img_error">预载图片头失败</string>
    <string name="analyze_img_size_error">读取图片大小失败</string>
    <string name="networkApiUrl">/api/v3/system/network2?platform=%1$s</string>
    <string name="mainPageApiUrl">/api/v3/h5/homeIndex?platform=%1$s</string>
    <string name="hostUrl">&hosturl;</string>
    <string name="proxyUrl">&proxyurl;</string>
    <string name="rankApiUrl">/api/v3/ranks?limit=21&amp;offset=%1$d&amp;date_type=%2$s&amp;audience_type=%3$s&amp;platform=%4$s</string>
    <string name="searchApiUrl">/api/v3/search/comic?limit=21&amp;offset=%1$d&amp;q=%2$s&amp;q_type=%3$s&amp;platform=%4$s</string>
    <string name="filterApiUrl">/api/v3/h5/filterIndex/comic/tags?type=1&amp;platform=%1$s</string>
    <string name="sortApiUrl">/api/v3/comics?limit=21&amp;offset=%1$d&amp;ordering=%2$s&amp;theme=%3$s&amp;top=%4$s&amp;platform=%5$s</string>
    <string name="bookInfoApiUrl">/api/v3/comic2/%1$s?platform=%2$s</string>
    <string name="bookUserQueryApiUrl">/api/v3/comic2/%1$s/query?platform=%2$s</string>
    <string name="groupInfoApiUrl">/api/v3/comic/%1$s/group/%2$s/chapters?limit=100&amp;offset=%3$d&amp;platform=%4$s</string>
    <string name="chapterInfoApiUrl">/api/v3/comic/%1$s/chapter%2$s/%3$s?platform=%4$s</string>
    <string name="topicApiUrl">/api/v3/topic/%1$s?platform=%2$s</string>
    <string name="topicContentApiUrl">/api/v3/topic/%1$s/contents?type=%2$d&amp;limit=21&amp;offset=%3$d&amp;platform=%4$s</string>
    <string name="recommendApiUrl">/api/v3/recs?pos=3200102&amp;limit=21&amp;offset=%1$d&amp;platform=%2$s</string>
    <string name="newestApiUrl">/api/v3/update/newest?limit=21&amp;offset=%1$d&amp;platform=%2$s</string>
    <string name="finishApiUrl">/api/v3/comics?limit=21&amp;offset=%1$d&amp;ordering=%2$s&amp;top=finish&amp;platform=%3$s</string>
    <string name="authorApiUrl">/api/v3/comics?limit=21&amp;offset=%1$d&amp;ordering=%2$s&amp;author=%3$s&amp;platform=%4$s</string>
    <string name="captionApiUrl">/api/v3/comics?limit=21&amp;offset=%1$d&amp;ordering=%2$s&amp;theme=%3$s&amp;platform=%4$s</string>
    <string name="loginApiUrl">/api/v3/login?platform=%1$s</string>
    <string name="memberInfoApiUrl">/api/v3/member/info?platform=%1$s</string>
    <string name="historyApiUrl">/api/v3/member/browse/comics?limit=21&amp;offset=%1$d&amp;platform=%2$s</string>
    <string name="shelfApiUrl">/api/v3/member/collect/comics?limit=21&amp;offset=%1$d&amp;free_type=1&amp;ordering=%2$s&amp;platform=%3$s</string>
    <string name="shelfOperateApiUrl">/api/v3/member/collect/comic</string>
    <string name="imgProxyApiUrl">https://&proxyurl;/api/img?code=%1$s&amp;url=%2$s</string>
    <string name="imgProxyCodeKeyID">settings_cat_net_et_img_proxy_code</string>
    <string name="apiProxyApiUrl">https://&proxyurl;/api/api?code=%1$s&amp;url=%2$s</string>
    <string name="imgResolutionKeyID">settings_cat_net_sb_image_resolution</string>
    <string name="darkModeKeyID">settings_cat_general_lp_dark_mode</string>
    <string name="reverseProxyKeyID">settings_cat_net_et_reverse_proxy</string>
    <string name="apiProxyKeyID">settings_cat_net_sw_use_api_proxy</string>
    <string name="imgProxyKeyID">settings_cat_net_sw_use_img_proxy</string>
    <string name="comandy_version_url">https://gitea.seku.su/api/v1/repos/fumiama/%1$s/releases/tags/default</string>
    <string name="comandy_download_url">"https://gitea.seku.su/fumiama/%1$s/releases/download/default/%2$s_%3$s.gz"</string>
    <string name="complete">已完结</string>
    <string name="TRANSPORT_WIFI">WIFI</string>
    <string name="TRANSPORT_CELLULAR">移动网络</string>
    <string name="TRANSPORT_BLUETOOTH">蓝牙</string>
    <string name="TRANSPORT_ETHERNET">以太网</string>
    <string name="TRANSPORT_LOWPAN">LOWPAN</string>
    <string name="TRANSPORT_NULL">无网络</string>
    <string name="TRANSPORT_ERROR">网络错误</string>
    <string name="pc_ua">Mozilla/5.0 (Linux; Android 13; Pixel 7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Mobile Safari/537.36 Edg/141.0.0.0</string>
    <string name="default_ua">__default_ua__</string>
    <string name="version">&appver;</string>
    <string name="requested">&source;</string>
    <string name="platform">&platform;</string>
    <string name="menu_update_time">更新时间</string>
    <string name="menu_hot">热度</string>
    <string name="menu_add_time">加入时间</string>
    <string name="menu_read_time">阅读时间</string>
    <string name="button_sub">加入书架</string>
    <string name="button_sub_subscribed">已加书架</string>
    <string name="button_start">开始阅读</string>
    <string name="button_more">更多</string>
    <string name="button_reload">重新加载</string>
    <string name="text_format_hit">热度 %1$d</string>
    <string name="text_format_stat">状态 %1$s</string>
    <string name="text_format_region">区域 %1$s</string>
    <string name="text_format_cloud_read_to">云读至%1$s</string>
    <string name="topics_series">专题系列</string>
    <string name="manga_rec">漫画推荐</string>
    <string name="rank_list">排行榜 ☟日周月 ☛冠亚季</string>
    <string name="hot_rank_list">本周排行</string>
    <string name="hot_list">热门更新</string>
    <string name="new_list">全新上架</string>
    <string name="rank_fast">上升最快</string>
    <string name="rank_week">近七天</string>
    <string name="rank_month">近三十天</string>
    <string name="rank_all">总榜单</string>
    <string name="author">作者</string>
    <string name="caption">标签</string>
    <string name="settings_cat_general">通用</string>
    <string name="settings_cat_general_lp_title_dark_mode">主题</string>
    <string name="settings_cat_general_lp_summary_dark_mode">默认跟随系统</string>
    <string name="settings_cat_general_sb_title_startup_menu">启动时显示</string>
    <string name="settings_cat_general_sb_summary_startup_menu">默认主页</string>
    <string name="settings_cat_general_et_title_app_version">拷贝版本号</string>
    <string name="settings_cat_general_et_summary_app_version">默认&appver;</string>
    <string name="settings_cat_general_et_title_platform">平台版本号</string>
    <string name="settings_cat_general_et_summary_platform">默认&platform;</string>
    <string name="settings_cat_general_sb_card_per_row">每行加载卡片数偏移</string>
    <string name="settings_cat_general_sm_card_per_row">默认为0表示无偏移, 在此基础上加减</string>
    <string name="settings_cat_general_sw_disable_kanban_animation">不显示看板娘动画</string>
    <string name="settings_cat_general_sm_disable_kanban_animation">如加载卡顿可考虑开启此选项</string>
    <string name="settings_cat_general_sw_enable_transparent_systembar">沉浸式系统栏</string>
    <string name="settings_cat_general_sm_enable_transparent_systembar">使全面屏设备导航栏和状态栏更沉浸</string>
    <string name="settings_cat_net">网络</string>
    <string name="settings_cat_net_sb_title_image_resolution">图片分辨率</string>
    <string name="settings_cat_net_sb_summary_image_resolution">默认1500</string>
    <string name="settings_cat_net_sw_use_cellar">总是使用流量观看</string>
    <string name="settings_cat_net_sm_use_cellar">打开后不再在开始阅读时提示</string>
    <string name="settings_cat_net_sw_use_foreign">使用海外线路</string>
    <string name="settings_cat_net_sm_use_foreign">不管使用什么线路, API访问均是海外, 只有图片CDN可能会变化（也可能不变）, 请酌情选择使用</string>
    <string name="settings_cat_net_sw_use_comandy">增强型数据访问</string>
    <string name="settings_cat_net_sm_use_comandy">使用经过优化的请求方法访问服务器</string>
    <string name="settings_cat_net_sw_use_gzip">请求GZip</string>
    <string name="settings_cat_net_sm_use_gzip">告知服务器优先返回GZip格式数据</string>
    <string name="settings_cat_net_sw_use_json">请求JSON</string>
    <string name="settings_cat_net_sm_use_json">显式告知服务器返回JSON格式数据</string>
    <string name="settings_cat_net_sw_platform">请求平台</string>
    <string name="settings_cat_net_sm_platform">向服务器报告平台版本号</string>
    <string name="settings_cat_net_sw_referer">请求来源</string>
    <string name="settings_cat_net_sm_referer">向服务器报告请求来源</string>
    <string name="settings_cat_net_sw_version">请求版本号</string>
    <string name="settings_cat_net_sm_version">向服务器报告请求版本号</string>
    <string name="settings_cat_net_sw_region">请求区域</string>
    <string name="settings_cat_net_sm_region">向服务器报告请求区域</string>
    <string name="settings_cat_net_et_title_api_url">请求API网址</string>
    <string name="settings_cat_net_et_summary_api_url">一般无需更改，除非拷贝漫画官方更改网址，默认：&hosturl;</string>
    <string name="settings_cat_net_sw_use_img_proxy">使用图床代理（需要密钥）</string>
    <string name="settings_cat_net_sm_use_img_proxy">作者自建的图床代理，可缓解国内图片无法加载问题，但不保证100%解决，也不保证一直可用</string>
    <string name="settings_cat_net_et_title_img_proxy">代理密钥</string>
    <string name="settings_cat_net_et_summary_img_proxy">为避免滥用，该密钥随时可能会刷新</string>
    <string name="settings_cat_vm">漫画浏览</string>
    <string name="settings_cat_vm_sw_hide_info">隐藏底部时间栏</string>
    <string name="settings_cat_vm_sm_hide_info">打开后不再在底部显示时间和网络状态</string>
    <string name="settings_cat_vm_sw_vol_turn">音量键翻页</string>
    <string name="settings_cat_vm_sm_vol_turn">使用音量上下键前后翻页</string>
    <string name="settings_cat_vm_sb_vertical_max">竖向翻页一次加载页数</string>
    <string name="settings_cat_vm_sm_vertical_max">默认为20</string>
    <string name="settings_cat_vm_sb_quality">图片质量</string>
    <string name="settings_cat_vm_sm_quality">默认为100</string>
    <string name="settings_cat_md">漫画下载</string>
    <string name="settings_cat_md_sw_show_0m_manga">显示未下载漫画</string>
    <string name="settings_cat_md_sm_show_0m_manga">打开后将在我的下载显示所有浏览过详情页的漫画，旧版下载永远全部显示</string>
</resources>