<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_cat_net">
        <ListPreference
            android:max="1500"
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_sb_image_resolution"
            app:selectable="true"
            app:summary="@string/settings_cat_net_sb_summary_image_resolution"
            app:title="@string/settings_cat_net_sb_title_image_resolution"
            app:entries="@array/resolutions"
            app:entryValues="@array/resolutions"
            android:defaultValue="1500"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_sw_use_cellar"
            app:selectable="true"
            app:summary="@string/settings_cat_net_sm_use_cellar"
            app:title="@string/settings_cat_net_sw_use_cellar" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_sw_use_foreign"
            app:selectable="true"
            app:summary="@string/settings_cat_net_sm_use_foreign"
            app:title="@string/settings_cat_net_sw_use_foreign" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/hostUrl"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/settings_cat_net_et_title_api_url"
            android:summary="@string/settings_cat_net_et_summary_api_url"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_et_api_url" />
        <!--
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_sw_use_api_proxy"
            app:selectable="true"
            app:summary="@string/settings_cat_net_sm_use_api_proxy"
            app:title="@string/settings_cat_net_sw_use_api_proxy" />
        -->
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_sw_use_img_proxy"
            app:selectable="true"
            app:summary="@string/settings_cat_net_sm_use_img_proxy"
            app:title="@string/settings_cat_net_sw_use_img_proxy" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/settings_cat_net_et_title_img_proxy"
            android:summary="@string/settings_cat_net_et_summary_img_proxy"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:key="settings_cat_net_et_img_proxy_code" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_cat_vm">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_vm_sw_hide_info"
            app:selectable="true"
            app:summary="@string/settings_cat_vm_sm_hide_info"
            app:title="@string/settings_cat_vm_sw_hide_info" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_vm_sw_vol_turn"
            app:selectable="true"
            app:summary="@string/settings_cat_vm_sm_vol_turn"
            app:title="@string/settings_cat_vm_sw_vol_turn" />
        <SeekBarPreference
            android:defaultValue="20"
            app:iconSpaceReserved="false"
            app:key="settings_cat_vm_sb_vertical_max"
            app:showSeekBarValue="true"
            app:summary="@string/settings_cat_vm_sm_vertical_max"
            app:title="@string/settings_cat_vm_sb_vertical_max" />
        <SeekBarPreference
            android:defaultValue="100"
            app:iconSpaceReserved="false"
            app:key="settings_cat_vm_sb_quality"
            app:showSeekBarValue="true"
            app:summary="@string/settings_cat_vm_sm_quality"
            app:title="@string/settings_cat_vm_sb_quality" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_cat_md">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="settings_cat_md_sw_show_0m_manga"
            app:selectable="true"
            app:summary="@string/settings_cat_md_sm_show_0m_manga"
            app:title="@string/settings_cat_md_sw_show_0m_manga" />
    </PreferenceCategory>
</PreferenceScreen>
